--- a/hello.html
+++ b/hello.html
@@ -42,8 +42,9 @@
 			<p>
 				100 000ième test de Git <br/><br/><br/>
 				Je suis une bouze<br/><br/>
-				Je confonds les commandes <br/><br/>
-				Pour refaire un 100 001ième test de commit et tout et tout <br/><br/><br/>
+				Je confonds un peu moins les commandes <br/><br/>
+				Pour refaire un 100 002ième test de commit et tout et tout <br/><br/><br/>
+				Youpiiiiii !!!!
 				
 				
 			</p>			
